fix(breadcrumb): add line-height to icon to fix jumping breadcrumb container on navigate

--- a/src/app/components/knx-breadcrumb/breadcrumb.component.scss
+++ b/src/app/components/knx-breadcrumb/breadcrumb.component.scss
@@ -41,4 +41,8 @@
   color: $knab-white;
   text-decoration: none;
   margin-right: 15px;
+
+  span:before {
+    line-height: 1em; //fix jumpy breadcrumb container
+  }
 }
